models/nvidia_nim/nemotron-rerank-1b/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nemotron-rerank-1b
  labels:
    app: nemotron-rerank-1b
spec:
  to:
    kind: Service
    name: nemotron-rerank-1b
    weight: 100
  port:
    targetPort: 8000
  tls:
    termination: edge
  wildcardPolicy: None
